[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://World/background.jpg" type="Texture" id=2]
[ext_resource path="res://Font/pressed.stylebox" type="StyleBox" id=3]
[ext_resource path="res://Font/disabled.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Font/hover.stylebox" type="StyleBox" id=5]
[ext_resource path="res://Font/normal.stylebox" type="StyleBox" id=6]
[ext_resource path="res://Font/focused.stylebox" type="StyleBox" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 325.0
margin_bottom = 183.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Startbutton" type="Button" parent="VBoxContainer"]
margin_right = 44.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.8, 0.027451, 0.952941, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Optionbutton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 44.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.8, 0.027451, 0.952941, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitbutton" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 44.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.8, 0.027451, 0.952941, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Startbutton" to="." method="_on_Startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Optionbutton" to="." method="_on_Optionbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitbutton" to="." method="_on_Quitbutton_pressed"]
